# langchain-course

./: .env.template  .pre-commit-config.yaml  README.md  pyproject.toml
01-get-started/: README.md  predict.py  predict_with_search.py  predict_with_search_text.py
docs/: install.md
